# cpplogging

./: CMakeLists.txt  README.md
include/cpplogging/: Colors.hpp  LogLevel.hpp  Logger.hpp  MACROS.HPP  core  includes.hpp
src/: Colors.cpp  LogLevel.cpp
